remove redundant PORT env var

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,10 +19,9 @@ steps:
   args: [
     'run', 'deploy', 'roi',
     '--image=gcr.io/$PROJECT_ID/roi:$COMMIT_SHA',
-    '--cpu=4', '--memory=16Gi',
+    '--cpu=2', '--memory=16Gi',
     '--region=us-central1',
-    '--service-account=qa-qc-stage@$PROJECT_ID.iam.gserviceaccount.com',
-    '--set-env-vars', 'PORT=8000'
+    '--service-account=qa-qc-stage@$PROJECT_ID.iam.gserviceaccount.com'
   ]
 
 options:
