--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
+
 # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
   args: [
@@ -21,8 +22,8 @@ steps:
     '--image=gcr.io/$PROJECT_ID/roi:$COMMIT_SHA',
     '--cpu=4', '--memory=16Gi',
     '--region=us-central1',
-    '--service-account=qa-qc-stage@$PROJECT_ID.iam.gserviceaccount.com',
-    '--set-env-vars=PROJECT_ID=$PROJECT_ID'
+    '--service-account=${_SERVICE_ACCOUNT}', # Directly use the substitution variable
+    '--set-env-vars=PROJECT_ID=$PROJECT_ID'  # Set runtime env var for use in R
   ]
 
 options:
