fix env var for PROJECT_ID

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,7 +23,7 @@ steps:
     '--cpu=4', '--memory=16Gi',
     '--region=us-central1',
     '--service-account=$SERVICE_ACCOUNT_EMAIL', # Directly use the substitution variable
-    '--set-env-vars=$PROJECT_ID'     # Set runtime env var for use in R
+    '--set-env-vars=PROJECT_ID=$PROJECT_ID'     # Set runtime env var for use in R
   ]
 
 options:
